<resources>
    <string name="app_name">Io</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_my_work_history">근무기록 조회</string>

    <!-- 자동 생성된 로그인 액티비티에 의해 추가된 문자열. 필요없음? -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- xml에서 가져오기 테스트 -->
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>

    <string name="activity_load_update_dialog_title">업데이트</string>
    <string name="activity_load_update_dialog_message">앱이 업데이트 되었습니다.\n
        더 나은 서비스 이용을 위해 스토어에서 업데이트를 받아주세요.\n</string>
    <string name="activity_load_update_dialog_positive">업데이트 받기</string>
    <string name="activity_load_update_dialog_negative">나중에 받기</string>

    <string name="activity_start_signup">회원가입</string>
    <string name="activity_start_login">로그인</string>
    <string name="activity_start_info">회원가입을 하면 IO의 서비스 약관, 개인정보 취급방침에 동의하는 것으로 간주됩니다.</string>

    <string name="activity_info_personal_title">개인정보 취급 방침</string>

    <string name="activity_info_terms_title">서비스 약관</string>

    <string name="activity_registration_title">휴대폰 번호를 입력해 주세요</string>
    <string name="activity_registration_text_hint">휴대폰 번호</string>
    <string name="activity_registration_already_registered">이미 회원 가입된 번호입니다. 로그인을 해보세요.</string>
    <string name="activity_registration_to_login">이동</string>
    <string name="activity_registration_unregistered_number">io 사용 사업장에 등록되지 않은 번호입니다. 사업장 관리자에게 등록을 요청해 보세요</string>
    <string name="activity_registration_wrong_number">현재 사용하고 계신 단말에서 실제 사용 중인 번호를 입력해 주세요</string>
    <string name="activity_registration_no_usim">USIM이 없는 경우</string>

    <string name="activity_registration_password_title">비밀번호를 설정하세요</string>
    <string name="activity_registration_password_pwd_hint">비밀번호(6~20)</string>
    <string name="activity_registration_password_confirm_hint">비밀번호 한 번 더 입력</string>
    <string name="activity_registration_password_wrong_confirm">입력한 비밀번호가 서로 다릅니다</string>
    <string name="activity_registration_password_reg_complete">회원가입이 완료되었습니다!</string>
    <string name="activity_registration_password_reg_fail">회원가입에 실패하였습니다. 다시 시도해 주세요.</string>

    <string name="activity_login_title">로그인</string>
    <string name="activity_login_phone_hint">휴대폰 번호</string>
    <string name="activity_login_password_hint">비밀번호</string>
    <string name="activity_login_reset_password">비밀번호 재설정 ></string>

    <string name="activity_login_unregistered_number">가입되지 않은 휴대폰 번호입니다.</string>
    <string name="activity_login_wrong_password">비밀번호가 일치하지 않습니다.</string>
    <string name="activity_login_server_error">서버에 연결할 수 없습니다.</string>

    <string name="activity_reset_pwd_phone_small_title">계정을 찾으려면 휴대폰 번호를 입력하세요</string>
    <string name="activity_reset_pwd_phone_unregistered_number">가입되지 않은 휴대폰 번호입니다</string>
    <string name="activity_reset_pwd_phone_wrong_number">현재 사용하고 계신 단말에서 실제 사용 중인 번호를 입력해 주세요</string>
    <string name="activity_reset_pwd_phone_no_usim">USIM이 없는 경우</string> <!-- 일단 임시 -->

    <string name="activity_reset_pwds_title">비밀번호를 재설정 하시겠어요?</string>
    <string name="activity_reset_password_small_title">새로운 비밀번호를 입력하세요</string>
    <string name="activity_reset_password_pwd_hint">비밀번호(6~20)</string>
    <string name="activity_reset_password_confirm_hint">비밀번호 한 번 더 입력</string>
    <string name="activity_reset_password_wrong_confirm">입력한 비밀번호가 서로 다릅니다</string>
    <string name="activity_reset_password_reset_complete">비밀번호가 재설정되었습니다</string>
    <string name="activity_reset_password_reset_fail">비밀번호 재설정에 실패하였습니다. 다시 시도해 주세요.</string>

    <string name="activity_main_am">오전</string>
    <string name="activity_main_pm">오후</string>
    <string name="activity_main_leave_punch_in">출근</string>
    <string name="activity_main_work_pause">자리비움</string>
    <string name="activity_main_work_return">복귀</string>
    <string name="activity_main_work_punch_out">퇴근</string>

    <string name="activity_request_wifi_txt1">근무 중인 사업장을 검색해주세요.</string>
    <string name="activity_request_wifi_txt2">사업장이 검색되지 않을 경우, 사업장 리더에게 신규 등록을 요청하세요.</string>
    <string name="activity_request_wifi_hint">검색어 입력</string>
    <string name="activity_request_store_blank">검색결과가 없습니다</string>
    <string name="activity_request_apply">등록 신청하기</string>
    <string name="activity_request_apply_txt1">근무지가 맞는지 확인해 주세요</string>
    <string name="activity_request_apply_txt2">[등록 신청하기] 를 누르면 사업장 리더가 승인 후 근무지로 등록이 완료됩니다.</string>
    <string name="dialog_store_apply_txt1">신규 근무지 등록이 신청되었습니다.</string>
    <string name="dialog_store_apply_txt2">사업장 리더가 승인하면 알람으로 알려드리며, 이후부터 출퇴근 체크가 가능합니다.</string>

    <string name="dialog_main_am">am</string>
    <string name="dialog_main_pm">pm</string>
    <string name="dialog_main_punchin_complete">출근 처리가 완료되었습니다!</string>
    <string name="dialog_main_punchout_complete">퇴근 처리가 완료되었습니다!</string>
    <string name="dialog_main_pause_title">자리비움</string>
    <string name="dialog_main_pause_message">자리비움을 신청하시겠습니까?</string>
    <string name="dialog_main_wifi_enabled">활성화하기</string>
    <string name="dialog_main_request_wifi_add">사업장 추가</string>
    <string name="dialog_main_request_wifi_txt">주변에 등록된 사업장을 찾을 수 없습니다. 사업장에서 출근해 체크해주세요 현재 계신 곳을 신규 사업장으로 추가하려면 사업창 추가를 선택해주세요.</string>

    <string name="activity_break_request_app_title">자리비움 신청</string>
    <string name="activity_break_request_title">근무 상태를 자리비움 중으로 변경하시겠습니까?</string>
    <string name="activity_break_request_small_title">아래에서 사유를 선택해 주세요</string>
    <string name="activity_break_request_meal">식사</string>
    <string name="activity_break_request_rest">휴식</string>
    <string name="activity_break_request_work_outside">외부근무</string>
    <string name="activity_break_request_other">기타</string>
    <string name="activity_break_request_other_hint">입력해 주세요.</string>

    <string name="activity_punch_edit_error">변경된 시간을 입력해주세요</string>
    <string name="activity_punch_edit_complete">업무시간 정보가 변경되었습니다</string>


    <string name="role_switching_to_leader">리더 모드로 변경</string>
    <string name="role_switching_to_worker">근무자 모드로 변경</string>

    <string name="title_activity_leader_main">LeaderMainActivity</string>

    <!-- 네비게이션 -->
    <string name="myhistory">내출퇴근이력</string>
    <string name="punchoutaccept">퇴근 시각 승인</string>
    <string name="memberinfo">직원정보</string>
    <string name="storeinfo">근무지정보</string>
    <string name="setting">설정</string>

    <string name="logout">로그아웃</string>

    <string name="specific_phone">휴대폰번호</string>
    <string name="specific_store">근무지</string>
    <string name="specific_punch">근무시간</string>
    <string name="edit_punch_time">근무시간 정보 변경</string>

    <string name="punch_time">근무시간</string>

</resources>
