<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_punchoutaccept"
            android:icon="@drawable/ic_navi_strech"
            android:title="@string/punchoutaccept" />
        <item
            android:id="@+id/nav_memberinfo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/memberinfo" />
        <item
            android:id="@+id/nav_storeinfo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/storeinfo" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_navi_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_navi_logout"
            android:title="@string/logout" />
    </group>

</menu>
