<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/IO_basic">

    <ImageView
        android:id="@+id/activity_start_logo"
        android:layout_width="101dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/logo_start" />

    <Button
        android:id="@+id/activity_start_btn_signup"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_below="@+id/activity_start_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/activity_start_signup"
        android:textColor="@color/IO_basic"
        android:textSize="25sp"
        android:background="@drawable/btn_signup" />

    <Button
        android:id="@+id/activity_start_btn_login"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_below="@+id/activity_start_btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/activity_start_login"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:background="@drawable/btn_login" />

    <TextView
        android:id="@+id/activity_start_txt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:text="@string/activity_start_info"
        android:textSize="20sp"
        android:textColor="#FFF"/>

</RelativeLayout>
