<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/IO_basic"
    tools:context="com.planetory.io.LoginActivity">

    <ImageButton
        android:id="@+id/activity_login_btn_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/btn_back"  />

    <TextView
        android:id="@+id/activity_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/activity_login_title"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:layout_below="@+id/activity_login_btn_back"
        android:layout_alignStart="@+id/activity_login_btn_back" />

    <ImageView
        android:id="@+id/activity_login_img_phone"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/activity_login_title"
        android:layout_below="@+id/activity_login_title"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/ic_login_phone" />

    <EditText
        android:id="@+id/activity_login_txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_title"
        android:layout_toEndOf="@+id/activity_login_img_phone"
        android:layout_marginStart="8dp"
        android:layout_marginTop="105dp"
        android:ems="12"
        android:hint="@string/activity_login_phone_hint"
        android:textColorHint="#FFF"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:inputType="phone"/>

    <ImageView
        android:id="@+id/activity_login_img_password"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/activity_login_title"
        android:layout_below="@+id/activity_login_img_phone"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_login_password" />

    <EditText
        android:id="@+id/activity_login_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_txt_phone"
        android:layout_toEndOf="@+id/activity_login_img_password"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ems="12"
        android:maxLength="20"
        android:hint="@string/activity_login_password_hint"
        android:textColorHint="#FFF"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/activity_login_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_login_reset_password"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:layout_below="@+id/activity_login_img_password"
        android:layout_alignStart="@+id/activity_login_title" />

    <ImageButton
        android:id="@+id/activity_login_btn_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/btn_next_white"/>

</RelativeLayout>
