<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.planetory.io.MainNewActivity">

    <RelativeLayout
        android:id="@+id/activity_main_layout_leave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/activity_main_leave_txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="4월 21일 (금)"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/activity_main_leave_txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_main_leave_txt_date"
            android:layout_centerHorizontal="true"
            android:text="10:00:37"
            android:textColor="#000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/activity_main_leave_txt_meridiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/activity_main_leave_txt_time"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@+id/activity_main_leave_txt_time"
            android:text="@string/activity_main_am"
            android:textColor="#000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/activity_main_leave_btn_punch_in"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_below="@+id/activity_main_leave_txt_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_main_punch_in_notext"
            android:text="@string/activity_main_leave_punch_in"
            android:textColor="@color/IO_basic"
            android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_main_layout_work"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/activity_main_work_txt_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:text="4월 21일 (금) 오후 7:00"
            android:textColor="#000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/activity_main_work_tmp"
            android:layout_width="@dimen/punch_tracker_size"
            android:layout_height="@dimen/punch_tracker_size"
            android:layout_below="@+id/activity_main_work_txt_clock"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/btn_main_punch_in_notext" />

        <Button
            android:id="@+id/activity_main_work_btn_pause"
            android:visibility="gone"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/activity_main_work_tmp"
            android:layout_alignStart="@+id/activity_main_work_tmp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_main_pause_notext"
            android:text="@string/activity_main_work_pause"
            android:textColor="@color/IO_basic"
            android:textSize="16sp" />

        <Button
            android:id="@+id/activity_main_work_btn_return"
            android:visibility="visible"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/activity_main_work_tmp"
            android:layout_alignStart="@+id/activity_main_work_tmp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_main_pause_notext"
            android:text="@string/activity_main_work_return"
            android:textColor="@color/IO_basic"
            android:textSize="16sp" />

        <Button
            android:id="@+id/activity_main_work_btn_punch_out"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/activity_main_work_tmp"
            android:layout_alignEnd="@+id/activity_main_work_tmp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_main_punch_out_notext"
            android:text="@string/activity_main_work_punch_out"
            android:textColor="#FFF"
            android:textSize="16sp" />
    </RelativeLayout>
</FrameLayout>
