<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.planetory.io.MemberSpecificActivity">

    <ImageButton
        android:id="@+id/activity_member_specific_back_btn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/btn_back" />

    <LinearLayout
        android:id="@+id/activity_member_specific_inner_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorMemberSpec">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/specific_member_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_member_specific_inner_layout"
        android:text="@string/specific_phone"/>

    <TextView
        android:id="@+id/specific_member_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specific_member_phone_text"
        />

    <TextView
        android:id="@+id/specific_member_store_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specific_member_phone"
        android:text="@string/specific_store" />

    <TextView
        android:id="@+id/specific_member_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specific_member_store_text"
        />
    <TextView
        android:id="@+id/specific_member_punch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specific_member_store"
        android:text="@string/specific_punch" />
    <TextView
        android:id="@+id/specific_member_punch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specific_member_punch_text" />
    <ImageButton
        android:id="@+id/edit_punchtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/specific_member_punch_text"
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_edit"/>


</RelativeLayout>
