<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.planetory.io.RequestWifiSearchActivity">

    <ImageButton
        android:id="@+id/activity_back_btn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/btn_back_blue" />

    <TextView
        android:id="@+id/activity_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_request_wifi_txt1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_back_btn" />

    <TextView
        android:id="@+id/activity_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_request_wifi_txt2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_text1" />

    <LinearLayout
        android:id="@+id/editbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_text2">

        <EditText
            android:id="@+id/activity_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:hint="@string/activity_request_wifi_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_text2" />

        <ImageButton
            android:id="@+id/store_search_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            app:srcCompat="@drawable/ic_search_blue" />
    </LinearLayout>


    <ListView
        android:id="@+id/store_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editbox"></ListView>

    <TextView
        android:id="@+id/store_blank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editbox" />

</android.support.constraint.ConstraintLayout>
